feat: 1차 payple 연동

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <body>
     <div id="root"></div>
     <div id="modal-root"></div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://democpay.payple.kr/js/cpay.payple.1.0.1.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
