Feat: 구글 애널리틱스 조회수만 적용

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q5VKL8FRNK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-Q5VKL8FRNK');
+    </script>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link
